Possible fix for font not working on mobile?

--- a/src/components/TeamMember.sass
+++ b/src/components/TeamMember.sass
@@ -18,7 +18,6 @@
 
   .tm-name
     color: #25244B
-    font-family: apercu-medium
     font-size: 22px
     font-weight: 500
     letter-spacing: -0.46px
@@ -27,7 +26,6 @@
 
   .tm-title
     color: #5641F2
-    font-family: apercu-medium
     font-size: 16px
     letter-spacing: -0.19px
     line-height: 26px
